<resources>
    <string name="app_name">Ecosity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="send">Send</string>

    <string name="address_area">Περιοχή αστικού πρασίνου</string>
    <string name="address_kind">Είδος</string>
    <string name="address_geo_lat">Γεωγραφικό πλάτος</string>
    <string name="address_geo_long">Γεωγραφικό μήκος</string>
    <string name="address_height">Υψος</string>
    <string name="address_address">Διεύθυνση δένδρου</string>
    <string name="address_leaf_kind">Είδος Φύλλου</string>
    <string name="address_branch">Διακλάδωση</string>
    <string name="address_diameter">Διάμετρος</string>
    <string name="address_surface">Επιφάνεια</string>
    <string name="address_plant">Λεκάνη φυτού</string>
    <string name="address_territory_kind">Τύπος εδάφους</string>
    <string name="address_special">Ειδικές Συνθήκες δένδρου</string>
    <string name="address_photo">Φωτογραφικο υλικό</string>
    <string name="address_required">* υποχρεωτικό πεδίο</string>

    <string name="error_login_username">username is not correct.Please try again</string>
    <string name="error_login_password">Password is not correct.Please try again</string>
    <string name="error_wizard_empty">Please add a valid value</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDK6D7iWRFgJqUe2PH6VEXlu_LFzUOnWkw</string>
</resources>